--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,68 @@
-# YOLOv5 requirements
-# Usage: pip install -r requirements.txt
-
-# Base ----------------------------------------
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.1
-Pillow>=7.1.2
-PyYAML>=5.3.1
-requests>=2.23.0
-scipy>=1.4.1
-torch>=1.7.0
-torchvision>=0.8.1
-tqdm>=4.64.0
-protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
-
-# Logging -------------------------------------
-tensorboard>=2.4.1
-# wandb
-
-# Plotting ------------------------------------
-pandas>=1.1.4
-seaborn>=0.11.0
-
-# Export --------------------------------------
-# coremltools>=5.2  # CoreML export
-# onnx>=1.9.0  # ONNX export
-# onnx-simplifier>=0.4.1  # ONNX simplifier
-# nvidia-pyindex  # TensorRT export
-# nvidia-tensorrt  # TensorRT export
-# scikit-learn==0.19.2  # CoreML quantization
-# tensorflow>=2.4.1  # TFLite export
-# tensorflowjs>=3.9.0  # TF.js export
-# openvino-dev  # OpenVINO export
-
-# Extras --------------------------------------
-ipython  # interactive notebook
-psutil  # system utilization
-thop>=0.1.1  # FLOPs computation
-# albumentations>=1.0.3
-# pycocotools>=2.0  # COCO mAP
-# roboflow
+absl-py==1.2.0
+asttokens==2.0.5
+backcall==0.2.0
+blobconverter==1.3.0
+boto3==1.24.43
+botocore==1.27.43
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+colorama==0.4.5
+cycler==0.11.0
+decorator==5.1.1
+depthai==2.17.2.0
+executing==0.9.1
+fonttools==4.34.4
+google-auth==2.9.1
+google-auth-oauthlib==0.4.6
+grpcio==1.47.0
+idna==3.3
+ipython==8.4.0
+jedi==0.18.1
+jmespath==1.0.1
+kiwisolver==1.4.4
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+numpy==1.23.1
+oauthlib==3.2.0
+opencv-python==4.6.0.66
+packaging==21.3
+pandas==1.4.3
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.2.0
+prompt-toolkit==3.0.30
+protobuf==3.19.4
+psutil==5.9.1
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.12.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
+pyvirtualcam==0.9.1
+PyYAML==6.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+s3transfer==0.6.0
+scipy==1.9.0
+seaborn==0.11.2
+six==1.16.0
+stack-data==0.3.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+thop==0.1.1.post2207130030
+torch==1.12.0+cu116
+torchaudio==0.12.0+cu116
+torchvision==0.13.0+cu116
+tqdm==4.64.0
+traitlets==5.3.0
+typing_extensions==4.3.0
+urllib3==1.26.11
+wcwidth==0.2.5
+Werkzeug==2.2.1
